--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   min-height: 100vh;
   width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -58,4 +59,10 @@
 
 .tick {
     font-family: 'Open Sans';
+}
+
+#desc {
+  font-family: 'Open Sans';
+  margin-top: 2rem;
+  font-size: 0.8rem;
 }
